Updates from code inspection (#209)