@@ -6,6 +6,7 @@ import org.labkey.api.view.template.ClientDependency;
 import org.labkey.sequenceanalysis.SequenceAnalysisModule;
 
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * User: bimber
@@ -16,6 +17,6 @@ public class ReprocessLibraryButton extends SimpleButtonConfigFactory
 {
     public ReprocessLibraryButton()
     {
-        super(ModuleLoader.getInstance().getModule(SequenceAnalysisModule.class), "Re-process Selected", "SequenceAnalysis.window.ReprocessLibraryWindow.buttonHandler(dataRegionName);", Arrays.asList(ClientDependency.supplierFromPath("sequenceanalysis/window/ReprocessLibraryWindow.js")));
+        super(ModuleLoader.getInstance().getModule(SequenceAnalysisModule.class), "Re-process Selected", "SequenceAnalysis.window.ReprocessLibraryWindow.buttonHandler(dataRegionName);", List.of(ClientDependency.supplierFromPath("sequenceanalysis/window/ReprocessLibraryWindow.js")));
     }
 }
