@@ -6,6 +6,7 @@ import org.labkey.api.view.template.ClientDependency;
 import org.labkey.blast.BLASTModule;
 
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * User: bimber
@@ -16,6 +17,6 @@ public class CreateDatabaseButton extends SimpleButtonConfigFactory
 {
     public CreateDatabaseButton()
     {
-        super(ModuleLoader.getInstance().getModule(BLASTModule.class), "Create BLAST Database", "BLAST.window.DatabaseWindow.buttonHandler(dataRegionName);", Arrays.asList(ClientDependency.supplierFromPath("blast/window/DatabaseWindow.js")));
+        super(ModuleLoader.getInstance().getModule(BLASTModule.class), "Create BLAST Database", "BLAST.window.DatabaseWindow.buttonHandler(dataRegionName);", List.of(ClientDependency.supplierFromPath("blast/window/DatabaseWindow.js")));
     }
 }
