@@ -7,6 +7,7 @@ import org.labkey.api.view.template.ClientDependency;
 import org.labkey.jbrowse.JBrowseModule;
 
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * User: bimber
@@ -17,7 +18,7 @@ public class ReprocessSessionsButton extends SimpleButtonConfigFactory
 {
     public ReprocessSessionsButton()
     {
-        super(ModuleLoader.getInstance().getModule(JBrowseModule.class), "Re-process Selected", "JBrowse.window.ReprocessResourcesWindow.sessionHandler(dataRegionName);", Arrays.asList(ClientDependency.supplierFromPath("jbrowse/window/ReprocessResourcesWindow.js")));
+        super(ModuleLoader.getInstance().getModule(JBrowseModule.class), "Re-process Selected", "JBrowse.window.ReprocessResourcesWindow.sessionHandler(dataRegionName);", List.of(ClientDependency.supplierFromPath("jbrowse/window/ReprocessResourcesWindow.js")));
         setPermission(UpdatePermission.class);
     }
 }
