@@ -7,6 +7,7 @@ import org.labkey.api.singlecell.pipeline.SeuratToolParameter;
 import org.labkey.api.singlecell.pipeline.SingleCellStep;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class FindClustersAndDimRedux extends AbstractCellMembraneStep
 {
@@ -19,8 +20,9 @@ public class FindClustersAndDimRedux extends AbstractCellMembraneStep
     {
         public Provider()
         {
-            super("FindClustersAndDimRedux", "Find Clusters And Dim Redux", "CellMembrane/Seurat", "This will run tSNE and UMAP for the input object.", Arrays.asList(
-                    SeuratToolParameter.create("minDimsToUse", "Min. PCs to Use", "The minimum number of PCs to use", "ldk-integerfield", new JSONObject(){{
+            super("FindClustersAndDimRedux", "Find Clusters And Dim Redux", "CellMembrane/Seurat", "This will run tSNE and UMAP for the input object.", List.of(
+                    SeuratToolParameter.create("minDimsToUse", "Min. PCs to Use", "The minimum number of PCs to use", "ldk-integerfield", new JSONObject()
+                    {{
                         put("minValue", 0);
                     }}, 15)
 
